
==============================
ludy 0.0.6, 2007.09.15

1. ludy_ext:
  added:
    1. Array#combine

  moved:
    1. move Symbol#to_proc to Symbol#to_msg,
       and take back the original Symbol#to_proc implementation.

==============================
ludy 0.0.5, 2007.09.15

i forgot what i'd done... (days ago)
but sure there's Symbol#to_proc and Symbol#to_msg,
also, please read unit test.

==============================
ludy 0.0.4, 2007.08.12

1. ludy_ext:
  renamed:
    1. Proc#curry => Proc#__curry__

  added:
    1. Kernel#curry

strongly suggest that use Kernel#curry instead of Proc#__curry__,
see unit test for usage and changes

==============================
ludy 0.0.3, 2007.08.07

1. ludy_ext:
  added:
    1. Proc#curry
    2. Proc#compose
    3. Proc#chain
    4. Symbol#to_proc
    5. Array#foldl
    6. Array#foldr
    7. Array#filter

  removed:
    1. Fixnum#collect # see tc_ludy_ext.rb#test_fixnum_collect for reason

  info:
    1. ruby2ruby has NilClass#method_missing return nil,
       so i can't just make it return blackhole

2. module Curry:
  see test/tc_curry.rb for usage

see unit test for usage

==============================